@@ -126,6 +126,11 @@ public class MasterProductFragment extends BaseFragment {
       } else if (event.getType() == Event.BOTTOM_SHEET) {
         BottomSheetEvent bottomSheetEvent = (BottomSheetEvent) event;
         activity.showBottomSheet(bottomSheetEvent.getBottomSheet(), event.getBundle());
+      } else if (event.getType() == Event.FOCUS_INVALID_VIEWS) {
+        if (binding.editTextName.getText() == null
+            || binding.editTextName.getText().length() == 0) {
+          activity.showKeyboard(binding.editTextName);
+        }
       }
     });
 
