@@ -1,5 +1,6 @@
 2.0.0
 Changes since v2.0.0-beta05:
+- Improved: Focus product name field if empty on master product page init
 - Fixed: Sorting of entries on master data pages (#463) (thanks @Turysaz)
 - Fixed: Occasional crash on stock overview page
 
